# rf-template

./: .cspell.json  .env.example  .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  README.md  biome.jsonc  commitlintrc.yml  editorconfig.txt  glossaire.html  hooks.py  index.html  justfile  markdownlint.yaml  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: documentation.yml
assets/javascripts/: bundle.79ae519e.min.js
assets/javascripts/lunr/: tinyseg.js  wordcut.js
assets/javascripts/lunr/min/: lunr.ar.min.js  lunr.da.min.js  lunr.de.min.js  lunr.du.min.js  lunr.el.min.js  lunr.es.min.js  lunr.fi.min.js  lunr.fr.min.js  lunr.he.min.js  lunr.hi.min.js  lunr.hu.min.js  lunr.hy.min.js  lunr.it.min.js  lunr.ja.min.js  lunr.kn.min.js  lunr.ko.min.js  lunr.multi.min.js  lunr.nl.min.js  lunr.no.min.js  lunr.pt.min.js  lunr.ro.min.js  lunr.ru.min.js  lunr.sa.min.js  lunr.stemmer.support.min.js  lunr.sv.min.js  lunr.ta.min.js  lunr.te.min.js  lunr.th.min.js  lunr.tr.min.js  lunr.vi.min.js  lunr.zh.min.js
assets/javascripts/workers/: search.2c215733.min.js
assets/stylesheets/: main.484c7ddc.min.css  palette.ab4e12ef.min.css
conventions/: conventional_commits.html  debug.html  pre_commit_hooks.html  robot_design_rules.html  undo_pushed_commit.html  worktree_usage.html
docs/: glossaire.md  index.md
docs/_partials/: suite_page.md
docs/conventions/: conventional_commits.md  debug.md  pre_commit_hooks.md  robot_design_rules.md  undo_pushed_commit.md  worktree_usage.md
docs/setup/: installation.md
docs/stylesheets/: extra.css
docs/troubleshooting/: FAQ.md  KNOWN_ISSUES.md
releasenotes/: changelog.html
resources/debug/: debug.resource
scripts/: confluence_api.py  convert_gif_to_mp4.py  generate_release_notes.py
search/: search_index.json
setup/: installation.html
stylesheets/: extra.css
tests/ui_tests/: login_tests.robot  test.robot
tests_debug/: debug_login.robot
troubleshooting/: FAQ.html  KNOWN_ISSUES.html
