[project]
name = "rf-template"
description = "Automatisation des tests"
version = "0.1.0"
readme = "README.md"
requires-python = "==3.14.*"
dependencies = [
    "allure-robotframework>=2.15.0",
    "robotframework>=7.3.2",
    "robotframework-browser[bb]>=19.12.0",
    "robotframework-dashboard>=1.2.1",
    "robotframework-metrics>=3.7.0",
    "robotframework-reportportal>=5.6.4",
    "rust-just>=1.43.0",
]

[project.optional-dependencies]
dev = [
    "robotframework-robocop>=6.8.0",
    "robotcode[runner]>=2.2.0",
    "prek>=0.2.22",
    "ty>=0.0.1a33",
    "commitizen>=4.10.1",
    "ruff>=0.14.10",
    "robotframework-browser-recorder>=0.5.0",
    "python-dotenv>=1.2.1",
    "pymdown-extensions>=10.20",
    "marimo>=0.18.4",
]
docs = [
    "robotframework-testdoc>=0.4.0",
    "mkdocs-ezglossary-plugin>=2.1.0",
    "cairosvg>=2.8.2",
    "pillow>=11.3.0",
    "mdx-include>=1.4.2",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocstrings-python>=2.0.1",
    "mkdocs-material-extensions>=1.3.1",
    "mkdocs-autorefs>=1.4.3",
    "mkdocs-git-revision-date-localized-plugin>=1.5.0",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-glightbox>=0.5.2",
    "mkdocs-macros-plugin>=1.5.0",
    "mkdocs-redirects>=1.2.2",
    "mkdocs-to-confluence",
]

[project.urls]
homepage = "https://github.com/laguill/rf-template"

[tool.robocop.format]
line_ending = "unix"
configure = [
    "NormalizeAssignments.equal_sign_type=space_and_equal_sign",
    "NormalizeAssignments.equal_sign_type_variables=space_and_equal_sign",
    "NormalizeNewLines.section_lines=1",
    "RenameKeywords.enabled=True",
    "RenameTestCases.capitalize_each_word=True:enabled=True",
]

[tool.robocop.lint]
ignore = [
    "missing-doc-test-case",
    "missing-doc-suite",
    "missing-doc-keyword",
    "missing-doc-resource-file",
    "replace-set-variable-with-var", # Enable when RF 7.0 is minimum version
    "no-suite-variable",             # Enable when RF 7.0 is minimum version
    "replace-create-with-var",       # Enable when RF 7.0 is minimum version
    "too-many-calls-in-test-case",
    "too-long-test-case",
    "line-too-long",
]
configure = ["empty-lines-between-sections.empty_lines=1"]

[tool.marimo.save]
autosave_delay = 1000
autosave = "after_delay"
format_on_save = true

[tool.marimo.experimental]
multi_column = true
chat_modes = true
cache_panel = true

[tool.marimo.display]
dataframes = "rich"

[tool.ruff]
target-version = "py314"
respect-gitignore = true
line-length = 120
preview = true
extend-exclude = ["docstubs"]

[tool.ruff.format]
quote-style = "double"
skip-magic-trailing-comma = true
docstring-code-format = true

[tool.basedpyright]
reportUnusedCallResult = false
reportUnknownParameterType = false
reportMissingParameterType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportUnknownMemberType = false
reportInvalidTypeForm = false
reportPossiblyUnboundVariable = false
reportUnusedExpression = false
reportUnusedImport = false

[tool.uv.sources]
mkdocs-to-confluence = { git = "https://github.com/laguill/mkdocs-to-confluence.git", branch = "my-dev/all-features" }

[tool.ruff.lint]
preview = true


# Never try to fix `F401` (unused imports).
unfixable = ["F401"]
